--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -4,3 +4,10 @@
     overflow: hidden;
     z-index: 1;
 }
+
+.navbar div a:hover,
+.navbar div a:focus,
+.navbar div a:visited{
+    color: black;
+    text-decoration: none;
+}   
